--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
+          git config user.name "manishkr108"
+          git config user.email "manishkr108@users.noreply.github.com"
 
       - name: Fetch and try to merge master (no conflicts only)
         run: |
